# quick-calc

./: CMakeLists.txt
src/: CalculatorWidget.cpp  CalculatorWidget.h  main.cpp  mathSolver.cpp  mathSolver.h
